fix: add line-height to table border styles in general.scss for improved text readability

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1110,6 +1110,7 @@ table.table-border {
 		font-size: 17px;
 		font-weight: 600;
 		color: $gray-color;
+		line-height: 1;
 		transition: all 0.2s ease-out;
 
 		&:hover,
